--- a/frontend.yml
+++ b/frontend.yml
@@ -1,5 +1,6 @@
 - name: Setup Nginx Server and configuration.
   hosts: all
+  become: true
   tasks:
     - name: Installing Nginx Server
       ansible.builtin.yum:
