--- a/frontend.yml
+++ b/frontend.yml
@@ -9,19 +9,24 @@
 
     - name: Remove Old App Files
       ansible.builtin.file:
-        path: /usr/share/nginx/html/
+        path: /usr/share/nginx/html
         state: absent
+
+    - name: Create App Directory
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: directory
 
     - name: Unarchive Frontend App Code
       ansible.builtin.archive:
         src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
-        dest: /usr/share/nginx/html/
+        dest: /usr/share/nginx/html
         remote_src: yes
 
     - name: Copy Nginx Reverse Proxy
       ansible.builtin.copy:
         src: roboshop.conf
-        dest: /etc/nginx/default.d
+        dest: /etc/nginx/default.d/roboshop.conf
 
     - name: Enable and restart the Nginx Service
       ansible.builtin.systemd:
