--- a/frontend.yml
+++ b/frontend.yml
@@ -18,7 +18,7 @@
         state: directory
 
     - name: Unarchive Frontend App Code
-      ansible.builtin.archive:
+      ansible.builtin.unarchive:
         src: https://roboshop-artifacts.s3.amazonaws.com/frontend.zip
         dest: /usr/share/nginx/html
         remote_src: yes
