Ansible Robo Setup

--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,4 +1,4 @@
 - name: Load NodeJS module
-  ansible.builtin.import_tasks:
+  ansible.builtin.import_role:
     name: common
     tasks_from: nodejs
