--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Setup Mongodb Setup
-      ansible.builtin.copy:
+    - ansible.builtin.copy:
         src: mongodb.repo
         dest: /etc/yum.repos.d/mongodb.repo
 
