Ansible Robo Setup

--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -6,5 +6,16 @@
     name: nodejs
     state: installed
 
+- name: App Prerequisites
+  ansible.builtin.import_tasks:
+    file: app_presetup.yml
 
+- name: Install NodeJS Dependencies
+  ansible.builtin.shell: npm install
+  args:
+    chdir: /app
 
+  #systemd_setup
+- name: SystemD setup
+  ansible.builtin.import_tasks:
+    file: systemd_setup.yml
