--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -2,3 +2,8 @@
   ansible.builtin.import_role:
     name: common
     tasks_from: nodejs
+
+- name: Load mongo_schema_setup module
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: mongo_schema_setup
