--- a/roles/common/tasks/app_presetup.yml
+++ b/roles/common/tasks/app_presetup.yml
@@ -15,7 +15,7 @@
 - name: Download and Extract
   ansible.builtin.unarchive:
     src: https://roboshop-artifacts.s3.amazonaws.com/{{ component }}.zip
-    dest: /usr/share/nginx/html
+    dest: /app
     remote_src: yes
 
 
