Ansible Robo Setup

--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -19,6 +19,7 @@
   ansible.builtin.yum:
     name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
     state: installed
+    disable_gpg_check: true
 
 - name: Enable Redis Repo 6.2
   ansible.builtin.shell: yum module enable redis:remi-6.2 -y
