--- a/roles/cart/tasks/main.yml
+++ b/roles/cart/tasks/main.yml
@@ -3,7 +3,7 @@
     name: common
     tasks_from: nodejs
 
-- name: Load mongo_schema_setup module
-  ansible.builtin.import_role:
-    name: common
-    tasks_from: mongo_schema_setup
+#- name: Load mongo_schema_setup module
+#  ansible.builtin.import_role:
+#    name: common
+#    tasks_from: mongo_schema_setup
