--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -22,7 +22,7 @@
 
 - name: Import task
   ansible.builtin.import_task:
-    name: app_presetup.yml
+    file: app_presetup.yml
 
 - name: Install Python Dependencies
   ansible.builtin.shell: pip3.6 install -r requirements.txt
@@ -31,6 +31,6 @@
 
 - name: Load SystemD setup
   ansible.builtin.import_task:
-    name: systemd_setup.yml
+    file: systemd_setup.yml
 
 
