--- a/roles/common/tasks/systemd_setup.yml
+++ b/roles/common/tasks/systemd_setup.yml
@@ -1,17 +1,5 @@
-#echo -e "${colour}  Create SystemD ${component} Service ${nocolour}"
-#cp /home/centos/roboshop_shell/$catalogue.service /etc/systemd/system/${component}.service &>>${log_file}
-#
-#stat_check $?
-#
-#echo -e "${colour}  Enable and restart ${component} ${nocolour}"
-#systemctl daemon-reload &>>${log_file}
-#systemctl enable ${component} &>>${log_file}
-#systemctl restart ${component} &>>${log_file}
-#
-#stat_check $?
-
-- name: Create SystemD
-  ansible.builtin.copy:
+- name: copy SystemD file
+  ansible.builtin.template:
     src: "{{ component }}.service"
     dest: /etc/systemd/system/{{component}}.service
 
