--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -20,8 +20,13 @@
         dest: /usr/share/nginx/html
         remote_src: yes
 
+    - name: Copy nginx configuration.
+      ansible.builtin.template:
+        src: nginx.conf
+        dest: /etc/nginx/nginx.conf
+
     - name: Copy Nginx Reverse Proxy
-      ansible.builtin.copy:
+      ansible.builtin.template:
         src: roboshop.conf
         dest: /etc/nginx/default.d/roboshop.conf
 
