--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,6 +1,6 @@
 
     - name: Setup Mongodb Setup
-      ansible.builtin.copy:
+      ansible.builtin.template:
         src: mongodb.repo
         dest: /etc/yum.repos.d/mongodb.repo
 
