--- a/roles/frontend/templates/roboshop.conf
+++ b/roles/frontend/templates/roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue-dev.veerankitek.com:8080/; }
-location /api/user/ { proxy_pass http://user-dev.veerankitek.com:8080/; }
-location /api/cart/ { proxy_pass http://cart-dev.veerankitek.com:8080/; }
-location /api/shipping/ { proxy_pass http://shipping-dev.veerankitek.com:8080/; }
-location /api/payment/ { proxy_pass http://payment-dev.veerankitek.com:8080/; }
+location /api/catalogue/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.frontend.catalogue_url', region='us-east-01') }}; }
+location /api/user/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.frontend.user_url', region='us-east-01') }}; }
+location /api/cart/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.frontend.cart_url', region='us-east-01') }}; }
+location /api/shipping/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.frontend.shipping_url', region='us-east-01') }}; }
+location /api/payment/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.dev.frontend.payment_url', region='us-east-01') }}; }
 
 location /health {
   stub_status on;
