--- a/roles/frontend/templates/roboshop.conf
+++ b/roles/frontend/templates/roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.{{env}}.frontend.catalogue_url', region='us-east-1') }}; }
-location /api/user/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.{{env}}.frontend.user_url', region='us-east-1') }}; }
-location /api/cart/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.{{env}}.frontend.cart_url', region='us-east-1') }}; }
-location /api/shipping/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.{{env}}.frontend.shipping_url', region='us-east-1') }}; }
-location /api/payment/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.{{env}}.frontend.payment_url', region='us-east-1') }}/; }
+location /api/catalogue/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.frontend.catalogue_url', region='us-east-1') }}; }
+location /api/user/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.frontend.user_url', region='us-east-1') }}; }
+location /api/cart/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.frontend.cart_url', region='us-east-1') }}; }
+location /api/shipping/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.frontend.shipping_url', region='us-east-1') }}; }
+location /api/payment/ { proxy_pass {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.frontend.payment_url', region='us-east-1') }}/; }
 location /api/ratings/ { return 200; }
 
 location /health {
