--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -12,17 +12,26 @@
     name: redis
     state: installed
 
-- name: update Redis Listen Address - /etc/redis.conf
-  ansible.builtin.replace:
-    path: /etc/redis.conf
-    regexp: '127.0.0.1'
-    replace: '0.0.0.0'
+#- name: update Redis Listen Address - /etc/redis.conf
+#  ansible.builtin.replace:
+#    path: /etc/redis.conf
+#    regexp: '127.0.0.1'
+#    replace: '0.0.0.0'
+#
+#- name: update Redis Listen Address - /etc/redis/redis.conf
+#  ansible.builtin.replace:
+#    path: /etc/redis/redis.conf
+#    regexp: '127.0.0.1'
+#    replace: '0.0.0.0'
 
-- name: update Redis Listen Address - /etc/redis/redis.conf
+- name: update Redis Listen address - /etc/redis.conf & /etc/redis/redis.conf
   ansible.builtin.replace:
-    path: /etc/redis/redis.conf
+    path: {{item}}
     regexp: '127.0.0.1'
     replace: '0.0.0.0'
+  loop:
+    - /etc/redis.conf
+    - /etc/redis/redis.conf
 
 - name: Enable & Restart Services
   ansible.builtin.systemd:
