--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -26,7 +26,7 @@
 
 - name: update Redis Listen address - /etc/redis.conf & /etc/redis/redis.conf
   ansible.builtin.replace:
-    path: {{item}}
+    path: "{{item}}"
     regexp: '127.0.0.1'
     replace: '0.0.0.0'
   loop:
