--- a/roles/elk/tasks/main.yml
+++ b/roles/elk/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: CopyLogStash config
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: logstash.conf
     dest: /etc/logstash/conf.d/logstash.conf
 
