--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -4,11 +4,15 @@
     }
   }
   
-  ###Fileters
+  ##Fileters
+  filter {
+    grok {
+        match => { "message" => "%{IP:client}%{SPACE}%{HTTPDATE:ts}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD}/%{NUMBER}%{SPACE}%{NUMBER:http_status}%{SPACE}%{NUMBER:http_response_time:float}" }
+  }
     
-    output {
-    elasticsearch {
-    hosts => ["http://localhost:9200"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}"
+  output {
+  elasticsearch {
+  hosts => ["http://localhost:9200"]
+  index => "%{[@metadata][beat]}-%{[@metadata][version]}"
     }
   }
