--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -36,4 +36,9 @@
         state: restarted
         enabled: yes
 
+    - name: Load Elk Filebeat
+      ansible.builtin.import_role:
+        name: elk
+        tasks_from: filebeat
+
 
