--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -13,6 +13,6 @@
   output {
   elasticsearch {
   hosts => ["http://localhost:9200"]
-  index => "%{[@metadata][beat]}-%{[@metadata][version]}"
+  index => "%{[fields][component]}-%{+yyyy.MM.dd}"
     }
   }
