--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -9,6 +9,14 @@
     grok {
       match => { "message" => "%{IP:client}%{SPACE}%{HTTPDATE:ts}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD}/%{NUMBER}%{SPACE}%{NUMBER:http_status}%{SPACE}%{NUMBER:http_response_time:float}" }
   }
+
+  output {
+    elasticsearch {
+      hosts => ["http://localhost:9200"]
+      index => "%{[fields][component]}-%{+YYYY.MM.dd}"
+      #index => "%{[kubernetes][container][name]}-%{+YYYY.MM.dd}"
+    }
+  }
     
   output {
     elasticsearch {
