--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -5,9 +5,14 @@
   }
   
   ##Fileters
+;   filter {
+;     grok {
+;       match => { "message" => "%{IP:client}%{SPACE}%{HTTPDATE:ts}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD}/%{NUMBER}%{SPACE}%{NUMBER:http_status}%{SPACE}%{NUMBER:http_response_time:float}" }
+;   }
   filter {
     grok {
-      match => { "message" => "%{IP:client}%{SPACE}%{HTTPDATE:ts}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD}/%{NUMBER}%{SPACE}%{NUMBER:http_status}%{SPACE}%{NUMBER:http_response_time:float}" }
+      match => { "message" => "%{IP:client}%{SPACE}%{HTTPDATE:ts}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD}/%{NUMBER}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_time:float}" }
+    }
   }
 
   output {
@@ -18,9 +23,9 @@
     }
   }
     
-  output {
-    elasticsearch {
-      hosts => ["http://localhost:9200"]
-      index => "%{[fields][component]}-%{+yyyy.MM.dd}"
-    }
-  }
+;   output {
+;     elasticsearch {
+;       hosts => ["http://localhost:9200"]
+;       index => "%{[fields][component]}-%{+yyyy.MM.dd}"
+;     }
+;   }
