--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -21,9 +21,11 @@ rule_files:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "prometheus"
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
     static_configs:
-      - targets: ["localhost:9090","172.31.36.60:9100"]
+      - targets: ["localhost:9090"]
+
+  - job_name: "ec2"
+    ec2_sd_configs:
+      - region: eu-west-1
+        port: 9100
+
