--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -26,6 +26,6 @@ scrape_configs:
 
   - job_name: "ec2"
     ec2_sd_configs:
-      - region: eu-west-1
+      - region: us-east-1
         port: 9100
 
