--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -28,4 +28,7 @@ scrape_configs:
     ec2_sd_configs:
       - region: us-east-1
         port: 9100
+        filters:
+          - name: Monitor
+            values: [ "true" , "yes"]
 
