--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -41,4 +41,9 @@
         name: elk
         tasks_from: filebeat
 
+    - name: Load Prometheus Node Exporter
+      ansible.builtin.import_role:
+        name: prometheus
+        tasks_from: node-exporter
+
 
