--- a/roles/shipping/tasks/main.yml
+++ b/roles/shipping/tasks/main.yml
@@ -3,3 +3,8 @@
     name: common
     tasks_from: maven
 
+- name: Load Prometheus Node Exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
+
