--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -7,3 +7,8 @@
   ansible.builtin.import_role:
     name: common
     tasks_from: mongo_schema_setup
+
+- name: Load Prometheus Node Exporter
+  ansible.builtin.import_role:
+    name: prometheus
+    tasks_from: node-exporter
