--- a/roles/common/tasks/mongo_schema_setup.yml
+++ b/roles/common/tasks/mongo_schema_setup.yml
@@ -9,7 +9,12 @@
     state: present
 
 - name: Create SystemD Service
-  ansible.builtin.shell: mongo --host mongodb-dev.veerankitek.com </app/schema/{{ component }}.js
+  #ansible.builtin.shell: mongo --host mongodb-dev.veerankitek.com </app/schema/{{ component }}.js
+  ansible.builtin.shell: mongo --ssl --host {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.{{component}}.docdb_endpoint', region='us-east-1') }}:27017 --sslCAFile /app/rds-combined-ca-bundle.pem --username {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.docdb.username', region='us-east-1') }} --password {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.docdb.password', region='us-east-1') }} </app/schema/{{ component }}.js
+  #ansible.builtin.shell: mongo --ssl --host {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.{{component}}.docdb_endpoint', region='us-east-1') }}:27017 --sslCAFile /app/rds-combined-ca-bundle.pem --username {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.docdb.username', region='us-east-1') }} --password {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.docdb.password', region='us-east-1') }} </app/schema/{{ component }}.js
+
+
+
 
 
 
