--- a/roles/catalogue/templates/catalogue.service
+++ b/roles/catalogue/templates/catalogue.service
@@ -5,7 +5,7 @@ Description = Catalogue Service
 User=roboshop
 #Environment=MONGO_URL={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.catalogue.mongo_url', region='us-east-1') }}
 #Environment=MONGO={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.catalogue.mongo', region='us-east-1') }}
-Environment=MONGO_URL={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.catalogue.mongo_url', region='us-east-1') }}
+Environment=MONGO_URL="{{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.catalogue.mongo_url', region='us-east-1') }}"
 Environment=DOCUMENTDB={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.catalogue.mongo', region='us-east-1') }}
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=catalogue
