--- a/roles/user/templates/user.service
+++ b/roles/user/templates/user.service
@@ -2,12 +2,13 @@
 Description = User Service
 [Service]
 User=roboshop
-Environment=MONGO={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.user.mongo', region='us-east-1') }}
+#Environment=MONGO={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.user.mongo', region='us-east-1') }}
+Environment=DOCUMENTDB={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.user.mongo', region='us-east-1') }}
 Environment=REDIS_HOST={{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.user.redis_host', region='us-east-1') }}
 Environment=MONGO_URL="{{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.user.mongo_url', region='us-east-1') }}"
 Environment=MONGO=true
-Environment=REDIS_HOST=redis-dev.veerankitek.com
-Environment=MONGO_URL="mongodb://mongodb-dev.veerankitek.com:27017/users"
+#Environment=REDIS_HOST=redis-dev.veerankitek.com
+#Environment=MONGO_URL="mongodb://mongodb-dev.veerankitek.com:27017/users"
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
 
