--- a/roles/common/tasks/mysql_schema_setup.yml
+++ b/roles/common/tasks/mysql_schema_setup.yml
@@ -9,6 +9,7 @@
     state: present
 
 - name: Load Mysql Schema
-  ansible.builtin.shell: mysql -h mysql-dev.veerankitek.com -uroot -pRoboShop@1 </app/schema/{{ component }}.sql
+  #ansible.builtin.shell: mysql -h mysql-dev.veerankitek.com -uroot -pRoboShop@1 </app/schema/{{ component }}.sql
+  ansible.builtin.shell: mysql -h {{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.mysql.endpoint', region='us-east-1') }} -u{{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.mysql.username', region='us-east-1') }} -p{{ lookup('amazon.aws.aws_ssm', 'roboshop.{{env}}.mysql.password', region='us-east-1') }} </app/schema/{{ component }}.sql
 
 
